Bug 74171 - small style fix on DragDataBlackBerry.cpp
Summary: small style fix on DragDataBlackBerry.cpp
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 73144
  Show dependency treegraph
 
Reported: 2011-12-09 00:54 PST by Mary Wu
Modified: 2011-12-09 17:01 PST (History)
3 users (show)

See Also:


Attachments
Patch (2.31 KB, patch)
2011-12-09 00:59 PST, Mary Wu
no flags Details | Formatted Diff | Diff
Patch (2.31 KB, patch)
2011-12-09 02:25 PST, Mary Wu
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mary Wu 2011-12-09 00:54:24 PST
small style fix on DragDataBlackBerry.cpp
Comment 1 Mary Wu 2011-12-09 00:59:48 PST
Created attachment 118545 [details]
Patch
Comment 2 Leo Yang 2011-12-09 01:41:16 PST
Comment on attachment 118545 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=118545&action=review

Informal review. LGTM, only one nit.

> Source/WebCore/ChangeLog:9
> +        Style fix, no function impact, No new tests.
> +

No --> no
Comment 3 Mary Wu 2011-12-09 02:25:00 PST
Created attachment 118551 [details]
Patch
Comment 4 Rob Buis 2011-12-09 05:22:45 PST
Comment on attachment 118551 [details]
Patch

Looks good.
Comment 5 WebKit Review Bot 2011-12-09 17:01:17 PST
Comment on attachment 118551 [details]
Patch

Clearing flags on attachment: 118551

Committed r102492: <http://trac.webkit.org/changeset/102492>
Comment 6 WebKit Review Bot 2011-12-09 17:01:21 PST
All reviewed patches have been landed.  Closing bug.