Small style fix on DragDataBlackBerry.cpp https://bugs.webkit.org/show_bug.cgi?id=74171

Patch by Mary Wu <mary.wu@torchmobile.com.cn> on 2011-12-09
Reviewed by Rob Buis.

Style fix, no function impact, no new tests.

* platform/blackberry/DragDataBlackBerry.cpp:
(WebCore::DragData::containsURL):
(WebCore::DragData::asFilenames):
(WebCore::DragData::asURL):
(WebCore::DragData::asFragment):

Canonical link: https://commits.webkit.org/90893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102492 268f45cc-cd09-0410-ab3c-d52691b4dbfc